# decibl-metadata

./: .gitignore  README.md  database_spec.accdb
.circleci/: config.yml
deicbl_metadata/src/engine/: analyticsdb.rs  config.rs  mod.rs  models.rs  poopy.rs
metadata/: Cargo.toml
metadata/benches/: my_benchmark.rs
metadata/src/: analytics.db  lib.rs  main.rs
metadata/src/engine/: analyticsdb.rs  api_metadata.rs  audio_metadata.rs  config.rs  database_insertion.rs  file_creation.rs  mod.rs  models.rs  poopy.rs
metadata/tests/: test_api.rs  test_db.rs  test_metadata.rs
