[package]
name = "decibl-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
directories-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
audiotags = "0.4.1"
data-encoding = "2.3.3"
metaflac = "0.2"
symphonia = "0.5.0"
sha2 = "0.10.6"
chrono = "0.4.0"
mp3-metadata = "0.3.4"
walkdir = "2.3.2"
ring = "0.16.20"
serial_test = "0.4.0"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
